sidebar-layout bugfix

--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -116,43 +116,6 @@
     }
 }
 
-/*
-.sidebar-nav {
-}
-
-.sidebar-nav li a {
-        display: block;
-            text-decoration: none;
-                color: #999999;
-}
-
-.sidebar-nav li a:hover {
-        text-decoration: none;
-            color: #fff;
-                background: rgba(255,255,255,0.2);
-}
-
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus {
-        text-decoration: none;
-}
-
-.sidebar-nav > .sidebar-brand {
-        height: 65px;
-            font-size: 18px;
-                line-height: 60px;
-}
-
-.sidebar-nav > .sidebar-brand a {
-        color: #999999;
-}
-
-.sidebar-nav > .sidebar-brand a:hover {
-        color: #fff;
-            background: none;
-}
-*/
-
 /* Toggle
 -------------------------------------------------- */
 
@@ -169,6 +132,7 @@
   
     #sidebar {
         left: @bmf-logo-dim + 2 * @bmf-logo-padding - @bmf-sidebar-width;
+        overflow-y: hidden;
   
         p.switch {
             visibility: visible;
@@ -180,6 +144,7 @@
 
     .bmfsidebar-toggled #sidebar {
         left: 0;
+        overflow-y: auto;
         ul.sidebar-nav {
             margin-left: 0;
         }
